# ConcurrentAndParallel

./: .gitignore  README.md  compose.yaml  locking.py  main.py  pyproject.toml
async-tutorial/: README.md  basic_ex_01.py  basic_ex_02.py  basic_ex_03_gather.py  basic_ex_04_async_for.py  main.py  mp_with_asyncio.py  pyproject.toml
cur_price_tracker/: README.md  main.py  pyproject.toml  yaml_reader.py
cur_price_tracker/pipelines/: wiki_nyse_scraper_pipeline.yaml
cur_price_tracker/workers/: nyse_finance_worker.py  postgres_worker.py  queue_types.py  wiki_worker.py  yahoo_finance_worker.py
multiprocessing_tutorial/: README.md  comparision.py  main.py  mp_pool_comparision.py  mp_pool_ex1.py  mp_pool_ex2.py  pyproject.toml  using_queue_with_mp.py
threading-tutorial/: README.md  main.py  pyproject.toml
threading-tutorial/workers/: sleepy_workers.py  squared_sum_workers.py
