[project]
name = "concurrentandparallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "ERA001",
    "INP001",
    "T201",
]
unfixable = ["F401"]

[tool.uv.workspace]
members = ["threading-tutorial"]
