[project]
name = "concurrentandparallel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.46",
]



[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "ERA001",
    "INP001",
    "S101",
    "S311",
    "T201",
]
unfixable = ["F401"]

[tool.uv.workspace]
members = [
    "threading-tutorial",
    "cur_price_tracker",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
typing = [
    "lxml-stubs>=0.5.1",
    "types-requests>=2.32.4.20260107",
]
