[project]
name = "cur-price-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.36",
]
